--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -176,11 +176,11 @@
                     android:layout_height="wrap_content"
                     android:text="Sólo Audio" />
 
-                <RadioButton
-                    android:id="@+id/radioAudioYVideo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Audio y Vídeo" />
+                <!--<RadioButton-->
+                    <!--android:id="@+id/radioAudioYVideo"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="Audio y Vídeo" />-->
 
                 <RadioButton
                     android:id="@+id/radioNoMultimedia"
