--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -202,15 +202,21 @@
                 android:layout_marginBottom="20dp"
                 android:id="@+id/graph_FC" />
 
-            <Chronometer
-                android:id="@+id/chronometer3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <!--<Chronometer-->
+                <!--android:id="@+id/chronometer3"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_alignBottom="@+id/btnStart"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:textSize="24dp"-->
+                <!--android:visibility="invisible" />-->
+            <ImageView
+                android:id="@+id/image_mic"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_alignBottom="@+id/btnStart"
                 android:layout_centerHorizontal="true"
-                android:textSize="24dp"
-                android:visibility="invisible" />
-
+                />
         </RelativeLayout>
 
     </ScrollView>
