--- a/app/src/main/res/layout/activity_experiencia.xml
+++ b/app/src/main/res/layout/activity_experiencia.xml
@@ -1,161 +1,220 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+ <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/fecha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="180dp"
-        android:text="TextView" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
-    <TextView
-        android:id="@+id/nombre"
-        android:layout_below="@+id/fecha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="103dp"
-        android:text="TextView" />
+        <ImageView
+            android:id="@id/icon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="70dp"
+            android:background="@drawable/prueba_icon"
+            android:layout_centerHorizontal="true"/>
 
-    <TextView
-        android:id="@+id/tipoPruebaInfoExperiencia"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/nombre"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="30dp"
-        android:text="TextView" />
+     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_below="@id/icon"
+         android:layout_gravity="center">
 
-    <TextView
-        android:layout_below="@+id/tipoPruebaInfoExperiencia"
-        android:id="@+id/apellidos"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="112dp"
-        android:text="TextView" />
+         <!--<TextView-->
+             <!--android:id="@+id/tituloExperiencia"-->
+             <!--android:layout_width="wrap_content"-->
+             <!--android:layout_height="wrap_content"-->
+             <!--android:layout_centerHorizontal="true"-->
+             <!--android:layout_marginTop="10dp"-->
+             <!--android:textSize="20sp"-->
+             <!--android:textColor="#000000"-->
+             <!--android:textStyle="bold" />-->
 
-    <TextView
-        android:layout_below="@+id/apellidos"
-        android:id="@+id/sexo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="87dp"
-        android:text="TextView" />
+         <TextView
+             android:id="@+id/txtDatosSujeto"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/linea"
+             android:layout_marginLeft="30dp"
+             android:layout_marginTop="30dp"
+             android:textSize="12dp"
+             android:textStyle="bold"
+             android:textColor="@color/colorPrimary"
+             android:text="Información del sujeto" />
 
-    <TextView
-        android:layout_below="@+id/sexo"
-        android:id="@+id/fecha_nacimiento"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="180dp"
-        android:text="TextView" />
+         <TextView
+             android:id="@+id/nombre"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/txtDatosSujeto"
+             android:layout_marginLeft="103dp"
+             android:layout_marginTop="10dp"
+             android:text="TextView" />
 
-    <TextView
-        android:layout_below="@+id/fecha_nacimiento"
-        android:id="@+id/descripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="130dp"
-        android:text="TextView" />
+         <TextView
+             android:id="@+id/tipoPruebaInfoExperiencia"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/txtInfoTipoPrueba"
+             android:layout_marginLeft="30dp"
+             android:layout_marginTop="10dp"
+             android:text="TextView" />
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fecha"
-        android:layout_marginLeft="30dp"
-        android:text="Fecha de realización: "
-        android:textStyle="bold"
-         />
+         <TextView
+             android:id="@+id/apellidos"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/nombre"
+             android:layout_marginLeft="112dp"
+             android:layout_marginTop="10dp"
+             android:text="TextView" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/nombre"
-        android:layout_marginLeft="30dp"
-        android:text="Nombre: "
-        android:textStyle="bold"
-        />
+         <TextView
+             android:id="@+id/sexo"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/apellidos"
+             android:layout_marginLeft="87dp"
+             android:layout_marginTop="10dp"
+             android:text="TextView" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/apellidos"
-        android:layout_marginLeft="30dp"
-        android:text="Apellidos: "
-        android:textStyle="bold"
-        />
+         <TextView
+             android:id="@+id/fecha_nacimiento"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/sexo"
+             android:layout_marginLeft="180dp"
+             android:layout_marginTop="10dp"
+             android:text="TextView" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/sexo"
-        android:layout_marginLeft="30dp"
-        android:text="Sexo: "
-        android:textStyle="bold"
-        />
+         <TextView
+             android:id="@+id/txtInfoTipoPrueba"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/fecha_nacimiento"
+             android:layout_marginLeft="30dp"
+             android:layout_marginTop="30dp"
+             android:textStyle="bold"
+             android:textSize="12dp"
+             android:textColor="@color/colorPrimary"
+             android:text="Multimedia" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/fecha_nacimiento"
-        android:layout_marginLeft="30dp"
-        android:text="Fecha de nacimiento: "
-        android:textStyle="bold"
-        />
+         <TextView
+             android:id="@+id/txtInfoDescripcion"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/tipoPruebaInfoExperiencia"
+             android:layout_marginLeft="30dp"
+             android:layout_marginTop="30dp"
+             android:textStyle="bold"
+             android:textSize="12dp"
+             android:textColor="@color/colorPrimary"
+             android:text="Descripción" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/descripcion"
-        android:layout_marginLeft="30dp"
-        android:text="Descripción: "
-        android:textStyle="bold"
-        />
+         <TextView
+             android:id="@+id/descripcion"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/txtInfoDescripcion"
+             android:layout_marginLeft="30dp"
+             android:layout_marginTop="10dp"
+             android:textStyle="italic"
+             android:text="TextView" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/tipoPruebaInfoExperiencia"
-        android:layout_marginLeft="30dp"
-        android:text="Tipo de Prueba: "
-        android:textStyle="bold"
-        />
+         <TextView
+             android:id="@+id/fechaRealizacion"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="15dp"
+             android:layout_marginLeft="30dp"
+             android:textSize="15sp"
+             android:textColor="#F17300"
+             android:text="Fecha de realización: "
+             android:textStyle="bold" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView6"
-        android:id="@+id/btnStartExperiencia"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="Iniciar Prueba"/>
+         <View
+             android:id="@+id/linea"
+             android:layout_width="fill_parent"
+             android:layout_height="2dip"
+             android:layout_below="@id/fechaRealizacion"
+             android:layout_marginTop="30dp"
+             android:layout_marginLeft="20dp"
+             android:layout_marginRight="20dp"
+             android:background="#969696" />
 
-    <TextView
-        android:layout_below="@+id/btnStartExperiencia"
-        android:id="@+id/experienciaTerminada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:text="El sujeto ya ha realizado la experiencia. Consultar los datos en Web."
-        android:textColor="@color/colorAccent"
-        android:layout_marginTop="10dp"
-        android:textSize="20dp"
-        android:visibility="gone"
-        android:textStyle="bold"
-        />
+         <TextView
+             android:id="@+id/textView2"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignTop="@+id/nombre"
+             android:layout_marginLeft="30dp"
+             android:text="Nombre: "
+             android:textStyle="bold" />
 
-</RelativeLayout>
+         <TextView
+             android:id="@+id/textView3"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignTop="@+id/apellidos"
+             android:layout_marginLeft="30dp"
+             android:text="Apellidos: "
+             android:textStyle="bold" />
+
+         <TextView
+             android:id="@+id/textView4"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignTop="@+id/sexo"
+             android:layout_marginLeft="30dp"
+             android:text="Sexo: "
+             android:textStyle="bold" />
+
+         <TextView
+             android:id="@+id/textView5"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignTop="@+id/fecha_nacimiento"
+             android:layout_marginLeft="30dp"
+             android:text="Fecha de nacimiento: "
+             android:textStyle="bold" />
+
+         <Button
+             android:id="@+id/btnStartExperiencia"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/descripcion"
+             android:layout_centerHorizontal="true"
+             android:layout_marginTop="30dp"
+             android:layout_marginBottom="30dp"
+             android:textColor="#F17300"
+             android:textStyle="bold"
+             android:background="@drawable/rounded_button"
+             android:text="Inicio" />
+
+         <TextView
+             android:id="@+id/experienciaTerminada"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@+id/btnStartExperiencia"
+             android:layout_marginLeft="30dp"
+             android:layout_marginBottom="40dp"
+             android:text="El sujeto ya ha realizado la experiencia. Consultar los datos en Web."
+             android:textColor="@color/colorAccent"
+             android:textSize="20dp"
+             android:textStyle="bold"
+             android:visibility="gone" />
+
+     </RelativeLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
