--- a/app/src/main/res/layout/activity_nueva_experiencia.xml
+++ b/app/src/main/res/layout/activity_nueva_experiencia.xml
@@ -20,18 +20,26 @@
         android:layout_marginTop="20dp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_nombre_experiencia"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/edittext_experiencia"
-        android:id="@+id/btn_nombre_experiencia"
         android:layout_centerHorizontal="true"
-        android:text="Nueva Experiencia"/>
+        android:textColor="#F17300"
+        android:layout_marginTop="23dp"
+        android:textStyle="bold"
+        android:background="@drawable/rounded_button_info_prueba"
+        android:text="Nueva Experiencia" />
 
     <Button
         android:id="@+id/btn_crearexp"
-        android:layout_width="wrap_content"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
-        android:text="Crear Experiencia"
+        android:text="Guardar y Salir"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:textColor="#4EE57F"
+        android:background="@drawable/rounded_button_crear_experiencia"
         android:layout_below="@+id/btn_nombre_experiencia"
         android:layout_centerHorizontal="true"
         android:visibility="invisible"
