--- a/app/src/main/res/layout/to_do_list.xml
+++ b/app/src/main/res/layout/to_do_list.xml
@@ -52,7 +52,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="12dp"
                 android:gravity="right"
-                android:background="@color/white"
+                android:background="#FAFAFA"
                 android:src="@drawable/ic_start_experiencia_2"
                 android:text="@string/app_name" />
         </RelativeLayout>
