--- a/app/src/main/res/layout/to_do_list_2.xml
+++ b/app/src/main/res/layout/to_do_list_2.xml
@@ -6,27 +6,54 @@
     android:paddingBottom="0dp"
     android:orientation="horizontal">
 
-    <TextView
-    android:id="@+id/usuario_name"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_weight="50"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
-    android:gravity="center"
-    android:text="@string/app_name"
-    android:textSize="16sp"
-    android:textColor="#000000"/>
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:orientation="vertical">
 
-    <!--<Button-->
-    <!--android:id="@+id/start_exp"-->
-    <!--android:layout_width="25dp"-->
+        <TextView
+            android:id="@+id/usuario_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:text="One"/>
+
+        <View
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/usuario_name"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey"/>
+
+        <ImageButton
+            android:id="@+id/btnEliminarSujeto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="5dp"
+            android:gravity="right"
+            android:layout_centerVertical="true"
+            android:background="#FAFAFA"
+            android:src="@drawable/ic_eliminar"
+            android:text="@string/app_name" />
+    </RelativeLayout>
+
+    <!--<TextView-->
+    <!--android:id="@+id/usuario_name"-->
+    <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginRight="20dp"-->
-    <!--android:layout_marginLeft="10dp"-->
-    <!--android:layout_weight="15"-->
-    <!--android:contentDescription="@string/app_name"-->
-    <!--android:drawableRight="@drawable/ic_start_experiencia"-->
-    <!--android:paddingRight="14dp" />-->
+    <!--android:layout_weight="50"-->
+    <!--android:layout_marginLeft="40dp"-->
+    <!--android:layout_marginRight="40dp"-->
+    <!--android:gravity="center"-->
+    <!--android:text="@string/app_name"-->
+    <!--android:textSize="16sp"-->
+    <!--android:textColor="#000000"/>-->
 
     </LinearLayout>
