--- a/app/src/main/res/layout/to_do_list.xml
+++ b/app/src/main/res/layout/to_do_list.xml
@@ -50,10 +50,23 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="42dp"
                 android:gravity="right"
                 android:background="#FAFAFA"
                 android:src="@drawable/ic_start_experiencia_2"
+                android:text="@string/app_name" />
+
+            <ImageButton
+                android:id="@+id/btnEliminarExperiencia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="5dp"
+                android:gravity="right"
+                android:layout_centerVertical="true"
+                android:background="#FAFAFA"
+                android:src="@drawable/ic_eliminar"
                 android:text="@string/app_name" />
         </RelativeLayout>
 
