--- a/app/src/main/res/layout/activity_nueva_experiencia.xml
+++ b/app/src/main/res/layout/activity_nueva_experiencia.xml
@@ -10,6 +10,13 @@
         android:background="?attr/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
+    <LinearLayout
+        android:id="@+id/invisible_layout"
+        android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true" android:layout_width="0px"
+        android:layout_height="0px" />
+
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
