--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -216,6 +216,7 @@
                 android:layout_height="50dp"
                 android:layout_alignBottom="@+id/btnStart"
                 android:layout_centerHorizontal="true"
+                android:visibility="invisible"
                 />
         </RelativeLayout>
 
