--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Información de la experiencia"
+        android:text=""
         android:textSize="18dp"
         android:textStyle="bold"
         android:id="@+id/formulario_titulo"
