--- a/app/src/main/res/layout/login_activity_2.xml
+++ b/app/src/main/res/layout/login_activity_2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true">
@@ -10,7 +10,7 @@
         android:orientation="vertical"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:paddingTop="116dp">
+        android:paddingTop="86dp">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -61,5 +61,38 @@
             android:textColor="#92BB1D"
             android:textStyle="bold" />
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dip"
+            android:background="#D3D3D3"
+            android:layout_marginTop="115dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <ImageView
+                android:id="@+id/ugr"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="85dp"
+                android:src="@drawable/ugrlogo"
+                android:layout_weight="1"/>
+            <ImageView
+                android:id="@+id/lsi"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="85dp"
+                android:src="@drawable/lsilogo"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
